feat: add BrandAppBarcomponent

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,5 +1,6 @@
-$dark: #1e2029;
 $black: #111111;
+$dark: #1e2029;
+$darkGrey: #252833;
 $subject: #ffbf80;
 $location: #4acfac;
 $equipment: #7e8ce0;
