chore: add mobx and ListOfStoreCategory Component

--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -201,6 +201,22 @@ input,
 optgroup,
 select,
 textarea {
+    /* https://stackoverflow.com/questions/16077341/how-to-reset-all-default-styles-of-the-html5-button-element */
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    border-spacing: 0;
+    color: #26589F;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 1.42rem;
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0;
+    /*  */
     font-family: inherit;
     /* 1 */
     font-size: 100%;
