--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -6,3 +6,9 @@ $location: #4acfac;
 $equipment: #7e8ce0;
 $tag: #36c7d0;
 $conditions: #ffa48e;
+$white: #E3E3E5;
+.MuiLinearProgress-root {}
+
+.MuiLinearProgress-bar {
+    background-color: #0000;
+}
