--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -205,9 +205,7 @@ textarea {
     background: none repeat scroll 0 0 transparent;
     border: medium none;
     border-spacing: 0;
-    color: #26589F;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 16px;
     font-weight: normal;
     line-height: 1.42rem;
     list-style: none outside none;
@@ -234,7 +232,18 @@ textarea {
  */
 
 button,
-input {
+input,
+input:active,
+input:focus-visible {
+    /* margin: 0;
+    padding: 0; */
+    outline: 0px solid;
+    border: 0;
+    display: inline-block;
+    vertical-align: middle;
+    white-space: normal;
+    background: none;
+    /* Browsers have different default form fonts */
     /* 1 */
     overflow: visible;
 }
