--- a/components/lv1/AppBar/AppBar.module.scss
+++ b/components/lv1/AppBar/AppBar.module.scss
@@ -5,6 +5,7 @@
     background-color: theme.$darkGrey;
     display: flex;
     align-items: center;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.24);
     &_ArrowIcon {
         margin-left: 16px;
     }
