--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -6,8 +6,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    &_BoxBackgroundAllAppIcon {
+        z-index: 0;
+        position: relative;
+        display: flex;
+        justify-content: start;
+        top: 50px;
+        left: 0px;
+        &_BackgroundAllAppIcon {
+            background: red;
+            // width: 100%;
+            // position: absolute;
+        }
+    }
     &_MaxWidth {
         width: 100%;
+        min-height: 100vh;
+        background-color: theme.$dark;
         max-width: 430px;
     }
 }
