--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -15,6 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
 }
 
 html {
@@ -205,8 +206,7 @@ textarea {
     background: none repeat scroll 0 0 transparent;
     border: medium none;
     border-spacing: 0;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-weight: normal;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.42rem;
     list-style: none outside none;
     margin: 0;
