chore: change name of theme.scss to _theme.scss

--- a/components/lv0/ListOfStoreCategory/ListOfStoreCategory.module.scss
+++ b/components/lv0/ListOfStoreCategory/ListOfStoreCategory.module.scss
@@ -1,4 +1,4 @@
-@use '/styles/theme.scss' as theme;
+@use '/styles/_theme.scss' as theme;
 .ListOfStoreCategory {
     width: 100%;
     overflow-x: auto;
