--- a/pages/[store-front-page]/store-front-page.module.scss
+++ b/pages/[store-front-page]/store-front-page.module.scss
@@ -29,7 +29,7 @@
             flex-direction: row;
             gap: 40px;
             justify-content: center;
-            margin: 6px 0;
+            padding: 6px 0;
             &_Divider {
                 height: auto;
                 width: 1px;
@@ -45,6 +45,28 @@
                 }
                 &_Name {
                     color: theme.$white2
+                }
+            }
+        }
+        &_BoxPost {
+            display: flex;
+            overflow-x: auto;
+            overflow-y: hidden;
+            gap: 8px;
+            padding: 14px 0;
+            &_Box {
+                display: flex;
+                height: 160px;
+                aspect-ratio: 9/16;
+                // width: 90px;
+                box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.16);
+                object-fit: contain;
+                border-radius: 8px;
+                &:first-child {
+                    margin-left: 16px;
+                }
+                &:last-child {
+                    margin-right: 16px;
                 }
             }
         }
