feat: add open url to  contact component of store page

--- a/components/store-front-page/ContactItem/ContactItem.module.scss
+++ b/components/store-front-page/ContactItem/ContactItem.module.scss
@@ -10,6 +10,7 @@
         flex-direction: column;
         gap: 4px;
         &_Title {
+            text-transform: capitalize;
             color: theme.$white2;
         }
         &_Data {
