--- a/components/lv0/ListOfStore/ListOfStore.module.scss
+++ b/components/lv0/ListOfStore/ListOfStore.module.scss
@@ -1,6 +1,6 @@
 @use '/styles/_theme.scss' as theme;
 .Box {
-    margin-top: 22px;
+    padding-top: 22px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -18,6 +18,7 @@
         }
     }
     &_BoxListStore {
+        padding: 8px 0;
         display: flex;
         overflow-x: auto;
         overflow-y: hidden;
