feat: add login page

--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -1,27 +1,18 @@
 @use '/styles/_theme.scss' as theme;
 .Box {
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     background-color: theme.$black;
     display: flex;
     flex-direction: column;
     align-items: center;
     &_BoxBackgroundAllAppIcon {
         z-index: 0;
-        position: relative;
-        display: flex;
-        justify-content: start;
         top: 50px;
-        left: 0px;
-        &_BackgroundAllAppIcon {
-            background: red;
-            // width: 100%;
-            // position: absolute;
-        }
     }
     &_MaxWidth {
         width: 100%;
-        min-height: 100vh;
+        min-height: calc(var(--vh, 1vh) * 100);
         background-color: theme.$dark;
         max-width: 430px;
     }
