--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -7,4 +7,6 @@ $equipment: #7e8ce0;
 $tag: #36c7d0;
 $conditions: #ffa48e;
 $white: #E3E3E5;
-$white2: #A5A5A9
+$white2: #A5A5A9;
+$white3: #707070;
+$error: #FF1212
