--- a/components/login/Brand/AppBarLogin.module.scss
+++ b/components/login/Brand/AppBarLogin.module.scss
@@ -1,11 +1,10 @@
 @use '/styles/_theme.scss' as theme;
 .Box {
-    height: 60px;
+    height: 80px;
     width: 100%;
-    background-color: theme.$darkGrey;
     display: flex;
     align-items: center;
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.24);
+    z-index: 1;
     &_ArrowIcon {
         margin-left: 16px;
     }
