feat: add settings page

--- a/components/lv0/BottomNavigationBarButton/BottomNavigationBarButton.module.scss
+++ b/components/lv0/BottomNavigationBarButton/BottomNavigationBarButton.module.scss
@@ -14,7 +14,8 @@
         color: theme.$white;
     }
     &_IconActive {
-        & path {
+        & path,
+        & rect {
             fill: theme.$subject;
         }
     }
