--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -2,6 +2,6 @@
 .Box {
     width: 100%;
     max-width: 430px;
-    min-height: 100vh;
+    min-height: 100vh; // min-height: calc(var(--vh, 1vh) * 100);
     background: theme.$dark;
 }
