feat: add user to db

--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -33,7 +33,7 @@
     &_InputEmail {
         margin-top: 80px;
     }
-    &_InputPass {
+    &_InputCode {
         margin-top: 40px;
     }
     &_BtnNext {
