--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -1,6 +1,7 @@
 $black: #111111;
 $dark: #1e2029;
 $darkGrey: #252833;
+$darkGrey2: #393C4D;
 $subject: #ffbf80;
 $location: #4acfac;
 $equipment: #7e8ce0;
