feat: add modal to profile page

--- a/components/lv2/SettingsPage/SettingsPage.module.scss
+++ b/components/lv2/SettingsPage/SettingsPage.module.scss
@@ -5,6 +5,13 @@
     background: theme.$dark;
 }
 
+.Icon {
+    & path,
+    & rect {
+        fill: theme.$white
+    }
+}
+
 .BoxProfile {
     display: flex;
     flex-direction: row;
@@ -35,30 +42,4 @@
     width: 100%;
     height: 1px;
     background-color: theme.$darkGrey2;
-}
-
-.BoxListTile {
-    display: flex;
-    flex-direction: row;
-    padding: 34px;
-    padding-bottom: 0;
-    gap: 28px;
-    align-items: center;
-    &_Icon {
-        & path,
-        & rect {
-            fill: theme.$white
-        }
-    }
-    &_BoxDescription {
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-        & h4 {
-            color: theme.$white;
-        }
-        & p {
-            color: theme.$white3;
-        }
-    }
 }
