refactor: create component/global folder

--- a/components/global/lv1/BrandAppBar/BrandAppBar.module.scss
+++ b/components/global/lv1/BrandAppBar/BrandAppBar.module.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/theme' as theme;
+@use 'styles/theme' as theme;
 .BrandAppBar {
     &_Box {
         background-color: theme.$darkGrey;
