--- a/pages/user-profile/user-profile.module.scss
+++ b/pages/user-profile/user-profile.module.scss
@@ -12,6 +12,20 @@
         display: flex;
         position: relative;
     }
+    & input[type='file'] {
+        position: absolute;
+        top: 61px;
+        right: 0;
+        left: 0;
+        z-index: 1000;
+        display: none;
+    }
+    & input#file-upload-button {
+        background: red!important;
+        color: red!important;
+        display: none;
+        overflow: hidden;
+    }
     &_CameraProfileIcon {
         position: absolute;
         bottom: 0;
