--- a/components/global/lv2/SettingsPage/SettingsPage.module.scss
+++ b/components/global/lv2/SettingsPage/SettingsPage.module.scss
@@ -29,6 +29,13 @@
             color: theme.$white3
         }
     }
+    &_BoxPeople {
+        height: 75px;
+        width: 75px;
+        background-color: theme.$darkGrey2;
+        // padding: 20px;
+        border-radius: 1000px;
+    }
     &_BoxPlaceholderPeople {
         height: 75px;
         width: 75px;
