--- a/components/global/lv0/Icon/Icon.module.scss
+++ b/components/global/lv0/Icon/Icon.module.scss
@@ -4,6 +4,8 @@
         width: 100%;
         max-height: 28px;
         max-width: 28px;
+        min-height: 28px;
+        min-width: 28px;
     }
     &_Arrow {
         &_Up {
