feat: creating model of store bloc

--- a/components/global/lv0/Icon/Icon.module.scss
+++ b/components/global/lv0/Icon/Icon.module.scss
@@ -1,11 +1,11 @@
 .Icon {
     &_Size {
-        height: 100%;
-        width: 100%;
-        max-height: 28px;
-        max-width: 28px;
-        min-height: 28px;
-        min-width: 28px;
+        height: 28px;
+        width: 28px;
+        // max-height: 28px;
+        // max-width: 28px;
+        // min-height: 28px;
+        // min-width: 28px;
     }
     &_Arrow {
         &_Up {
