--- a/components/global/lv2/Account/AccountPage.module.scss
+++ b/components/global/lv2/Account/AccountPage.module.scss
@@ -12,6 +12,13 @@
     }
 }
 
+.BoxCol {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding: 22px 0;
+}
+
 .BoxProfile {
     display: flex;
     flex-direction: row;
