--- a/components/global/lv0/InputText/InputText.module.scss
+++ b/components/global/lv0/InputText/InputText.module.scss
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     &_input {
-        padding-bottom: 4px;
+        padding-bottom: 8px;
         padding-left: 4px;
+        height: 26px;
         color: theme.$white;
         border-bottom: 1px solid theme.$white2;
         transition: border-bottom 0.3s ease;
@@ -35,6 +36,6 @@
     &_labelActivate {
         font-size: 14px;
         color: theme.$white2;
-        bottom: 0;
+        bottom: 4px;
     }
 }
