--- a/components/global/lv0/ListTileBoldContent/ListTileBoldContent.module.scss
+++ b/components/global/lv0/ListTileBoldContent/ListTileBoldContent.module.scss
@@ -2,8 +2,7 @@
 .BoxListTile {
     display: flex;
     flex-direction: row;
-    padding: 34px;
-    padding-bottom: 0;
+    padding: 16px 34px;
     gap: 28px;
     align-items: center;
     &_Icon {
@@ -16,11 +15,14 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
-        & h4 {
-            color: theme.$white;
-        }
         & p {
             color: theme.$white3;
         }
+        & h4 {
+            color: theme.$white;
+        }
+    }
+    &_IconEdit {
+        margin-left: auto;
     }
 }
